Fixed Animation Composer Overflow

--- a/public/style/animation_composer.css
+++ b/public/style/animation_composer.css
@@ -50,6 +50,13 @@
  .MatchAnimationDialog .MatchSimulatorContainer{
  	border-radius:0px;
  }
+
+ .MatchAnimationDialog .MatchSimulatorContainer .MatcSimulator{
+	flex: 1;
+    display: flex;
+    overflow: hidden;
+ }
+
  
  .MatchAnimationDialogCntr{
  	height: 100%;
